--- a/NucbazAPI-2/package.json
+++ b/NucbazAPI-2/package.json
@@ -16,7 +16,10 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
-    "mongoose": "^8.16.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.0",
+    "nodemailer": "^7.0.3",
+    "randomstring": "^1.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
